# details-app

./: INSTALL.md  Jenkinsfile  README.md  pyproject.toml
src/details/: app.py
