[tool.poetry]
name = "details-app"
version = "0.1.0"
description = ""
authors = ["Silent Mobius <haimov1989@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.30"
gunicorn = "^22.0.0"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
flask = "^3.0.3"
codespell = "^2.0.0"
pytest = "^6.2.4"
pyspellchecker = "^0.7.0"   # Add spellchecker dependency
shellcheck-py = "^0.8.0.2" # Add shellcheck dependency

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

